cambios iconos sidebar

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
                with font-awesome or any other icon font library -->
           <li class="nav-item">
             <a [routerLink]="['/dashboard/usuarios']" class="nav-link">
-              <i class="nav-icon fas fa-users "></i>
+              <i class=" nav-icon fa fa-user-circle" aria-hidden="true"></i>
               <p>
                 Usuarios
               </p>
@@ -45,7 +45,7 @@
           </li>
           <li class="nav-item">
             <a [routerLink]="['/dashboard/pacientes']" class="nav-link">
-              <i class="nav-icon fas fa-user "></i>
+              <i class="nav-icon fas fa-users "></i>
               <p>
                 Pacientes
               </p>
@@ -53,7 +53,7 @@
           </li>
           <li class="nav-item">
             <a [routerLink]="['/dashboard/medicos']" class="nav-link">
-              <i class="nav-icon fas fa-user "></i>
+              <i class="nav-icon fa fa-user-md"></i>
               <p>
                 Medicos
               </p>
@@ -61,7 +61,7 @@
           </li>
           <li class="nav-item">
             <a [routerLink]="['/dashboard/examenes']" class="nav-link">
-              <i class="nav-icon fas fa-user "></i>
+              <i class="nav-icon fa fa-file"></i>
               <p>
                 Examenes
               </p>
