--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -55,7 +55,11 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado
           </th>
           <td mat-cell *matCellDef="let row">
-            <span class="badge bg-success" >{{ row.estado | titlecase }}</span></td>
+            <span #span  *ngIf="row.estado === 'activo'"
+             class="badge bg-success" >{{ row.estado | titlecase }}</span>
+             <span  *ngIf="row.estado === 'finalizado'"
+             class="badge bg-danger" >{{ row.estado | titlecase }}</span>
+            </td>
         </ng-container>
 
         <!-- Action Column -->
@@ -63,7 +67,9 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Accion</th>
           <td mat-cell *matCellDef="let row">
             <button mat-icon-button color="primary">
-              <mat-icon>edit</mat-icon>
+              <mat-icon
+              (click)="editExamen(row)"
+              >edit</mat-icon>
             </button>
             <button mat-icon-button color="warn">
               <mat-icon>delete</mat-icon>
