--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -44,7 +44,7 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Folio</mat-label>
-          <input formControlName="folio" matInput placeholder="Folio" />
+          <input formControlName="folioExamen" matInput placeholder="Folio" />
         </mat-form-field>
 
         <mat-form-field appearance="outline">
