--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -24,6 +24,14 @@
   <mat-grid-list cols="1">
     <div mat-dialog-content>
       <form [formGroup]="productForm">
+
+
+        <mat-form-field appearance="outline" *ngIf="noPaciente">
+          <mat-label>Folio Examen</mat-label>
+          <input formControlName="folioExamen" matInput placeholder="Folio Examen" readonly />
+        </mat-form-field>
+
+
         <mat-form-field appearance="outline">
           <mat-label>Nombre Medico</mat-label>
           <input
@@ -42,9 +50,9 @@
           />
         </mat-form-field>
 
-        <mat-form-field appearance="outline">
-          <mat-label>Folio</mat-label>
-          <input formControlName="folioExamen" matInput placeholder="Folio" />
+        <mat-form-field appearance="outline" *ngIf="noPaciente">
+          <mat-label>Folio Paciente</mat-label>
+          <input formControlName="folio" matInput placeholder="Folio Paciente" readonly />
         </mat-form-field>
 
         <mat-form-field appearance="outline">
@@ -108,8 +116,8 @@
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-          <mat-label>Prueba</mat-label>
-          <input formControlName="prueba" matInput placeholder="Prueba" />
+          <mat-label>Estudio</mat-label>
+          <input formControlName="estudio" matInput placeholder="Estudio" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" *ngIf="data?.estado === 'activo' " >
