--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -66,7 +66,8 @@
         <ng-container matColumnDef="accion">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Accion</th>
           <td mat-cell *matCellDef="let row">
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary"
+            *ngIf="row.estado !== 'finalizado'">
               <mat-icon
               (click)="editExamen(row)"
               >edit</mat-icon>
