pasar folio data

--- a/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
+++ b/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
@@ -74,7 +74,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let row">
             <button class="btn" mat-raised-button color="primary">
-              <mat-icon (click)="selectMedico(row)">reply</mat-icon>
+              <mat-icon (dblclick)="selectMedico(row)">reply</mat-icon>
             </button>
           </td>
         </ng-container>
