--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -119,7 +119,13 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Estudio</mat-label>
-          <input formControlName="estudio" matInput placeholder="Estudio" />
+          <mat-select formControlName="estudio" placeholder="Estudio">
+            <mat-option
+              *ngFor="let item of estudios"
+              [value]="item.estudio"
+              >{{ item.estudio }}</mat-option
+            >
+          </mat-select>
         </mat-form-field>
 
         <mat-form-field appearance="outline" *ngIf="data?.estado === 'activo'">
