--- a/src/app/pages/dialog-examenes/dialog-examenes.component.css
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.css
@@ -13,3 +13,12 @@ mat-form-field{
     margin-right: 5px;
 }
 
+
+.container-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+
