--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
   <h1 mat-dialog-title>Registro de Examenes</h1>
 
-  <button
+
+  <div class="container-center">
+
+    <button
     style="margin-left: 8px"
     mat-raised-button
     color="primary"
@@ -12,6 +15,7 @@
   </button>
 
   <button
+    #btnMedico
     style="margin: 5px"
     mat-raised-button
     color="primary"
@@ -20,6 +24,9 @@
     Buscar Medico
     <mat-icon>search</mat-icon>
   </button>
+
+  </div>
+  
 
   <mat-grid-list cols="1">
     <div mat-dialog-content>
