--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -28,9 +28,9 @@
         </ng-container>
 
         <!-- User Column -->
-        <ng-container matColumnDef="folio">
+        <ng-container matColumnDef="folioExamen">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Folio</th>
-          <td mat-cell *matCellDef="let row">{{ row.folio }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.folioExamen }}</td>
         </ng-container>
 
         <!-- Status Column -->
