--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -62,10 +62,13 @@
           </form>
     
           
-          <!-- /.social-auth-links
+        <div class="container">
           <p class="mb-0">
-            <a href="register.html" class="text-center">Register a new membership</a>
-          </p> -->
+            <a [routerLink]="['/register']"
+             class="text-center">Nuevo usuario</a>
+          </p>
+        </div>
+          
         </div>
         <!-- /.login-card-body -->
       </div>
