--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -50,7 +50,7 @@
             <button mat-icon-button (click)="editUser(row)" color="primary">
               <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button (click)="deleteUser(row.code)" color="warn">
+            <button mat-icon-button (click)="deleteUser(row.user)" color="warn">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
