--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -135,21 +135,89 @@
           </mat-select>
         </mat-form-field>
 
+        <!-- Parametros -->
 
+        <div class="parametros"
+        *ngIf="data?.estado === 'activo'">
+          <h3>Parametros: </h3>
+          <hr>
+  
+          <ng-container formArrayName="parametros">
+            <mat-form-field appearance="outline">
+  
+              <mat-label>Parametros</mat-label>
+              <mat-select>
+              <mat-option
+              value="Ego1"
+              (click)="addParametroSelect('Ego1')">
+                Ego1
+              </mat-option>
+            </mat-select>
+  
+            </mat-form-field>
+  
+            <button 
+            type="button"
+            class="btn btn-primary btn-sm ml-2" (click)="addParametro()">Nuevo Parametro</button>
+            
+  
+            <div class="form-row mb-4"
+            *ngFor="let parametro of parametros().controls; let i = index"
+                [formGroupName]="i">
+              <div class="input-group input-group-sm col-12 col-md-6 mb-4">
+                <div class="input-group-prepend">
+                  <span class="input-group-text bg-info">
+                    Tipo
+                  </span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                         aria-describedby="inputGroup-sizing-sm"
+                         formControlName="nombre">
+                         
+            </div>
+  
+                <div class="input-group input-group-sm col-12 col-md-6 mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-info" >
+                      Resultado
+                    </span>
+                  </div>
+                  <input type="number" class="form-control" aria-label="Sizing example input"
+                         aria-describedby="inputGroup-sizing-sm"
+                         formControlName="resultado">
+                </div>
 
-        <mat-form-field appearance="outline" *ngIf="data?.estado === 'activo'">
-          <mat-label>Resultado</mat-label>
-          <input formControlName="resultado" matInput placeholder="Resultado" />
-        </mat-form-field>
+                <div class="input-group input-group-sm col-12 col-md-6 mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-info" >
+                      Unidades
+                    </span>
+                  </div>
+                  <input type="text" class="form-control" aria-label="Sizing example input"
+                         aria-describedby="inputGroup-sizing-sm"
+                         formControlName="unidades">
+                </div>
 
-        <mat-form-field appearance="outline" *ngIf="data?.estado === 'activo'">
-          <mat-label>Dimensional</mat-label>
-          <input
-            formControlName="dimensional"
-            matInput
-            placeholder="Dimensional"
-          />
-        </mat-form-field>
+                <div class="input-group input-group-sm col-12 col-md-6 mb-4">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-info" >
+                      Valor Ref
+                    </span>
+                  </div>
+                  <input type="text" class="form-control" aria-label="Sizing example input"
+                         aria-describedby="inputGroup-sizing-sm"
+                         formControlName="ref">
+                </div>
+
+                <button 
+            type="button"
+            class="btn btn-danger btn-sm ml-2" (click)="deleteParametros(i)"> - Parametro</button>
+  
+
+                </div>
+          </ng-container>
+        </div>
+      
       </form>
     </div>
   </mat-grid-list>
