--- a/src/app/pages/dialog/dialog.component.html
+++ b/src/app/pages/dialog/dialog.component.html
@@ -1,7 +1,10 @@
 <h1 mat-dialog-title>Añadir Usuario</h1>
 <div mat-dialog-content>
   <form [formGroup]="productForm">
-    
+    <mat-form-field appearance="outline">
+      <mat-label>ID</mat-label>
+      <input formControlName="code" matInput placeholder="Code" readonly="" />
+    </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Usuario</mat-label>
       <input formControlName="user" matInput placeholder="Usuario" />
