--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -40,7 +40,8 @@
         <!-- Status Column -->
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-          <td mat-cell *matCellDef="let row">{{ row.status }}</td>
+          <td mat-cell *matCellDef="let row">
+           <span class="badge bg-success">{{ row.status | titlecase }}</span> </td>
         </ng-container>
 
         !-- Action Column -->
