cambios esteticos y peticiones api
Api para delete de examenes y pacientes

--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
@@ -27,9 +27,9 @@
           </ng-container>
   
           <!-- Prueba Examen Column -->
-          <ng-container matColumnDef="prueba">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Prueba </th>
-            <td mat-cell *matCellDef="let row"> {{row.prueba}} </td>
+          <ng-container matColumnDef="estudio">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estudio </th>
+            <td mat-cell *matCellDef="let row"> {{row.estudio}} </td>
           </ng-container>
   
           <!-- Resultado Column
