--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -1,12 +1,21 @@
 <div class="container">
   <div class="card-header resp">
     <h1 class="card-title">Listado de Examenes</h1>
+
+    <button *ngIf="examenes.length > 0"
+      class="btn btn-danger btn-sm ml-2 float-right"
+      (click)="borrarExamenes()"
+    >
+      <i class="fas fa-trash"> </i> Borrar Examenes
+    </button>
+
     <button
       class="btn btn-success btn-sm float-right"
       (click)="openDialogExamenes()"
     >
       <i class="fas fa-plus"> </i>Nuevo Examen
     </button>
+
   </div>
 
   <div style="margin-top: 10px">
@@ -60,7 +69,8 @@
 
         <!-- Action Column -->
         <ng-container matColumnDef="accion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Accion</th>
+          <th mat-header-cell *matHeaderCellDef>Accion
+          </th>
           <td mat-cell *matCellDef="let row">
             <button mat-icon-button color="primary"
             *ngIf="row.estado !== 'finalizado'">
@@ -69,7 +79,9 @@
               >edit</mat-icon>
             </button>
             <button mat-icon-button color="warn">
-              <mat-icon>delete</mat-icon>
+              <mat-icon
+              (click)="borrarExamen(row.folioExamen)"
+              >delete</mat-icon>
             </button>
           </td>
         </ng-container>
