--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -2,76 +2,36 @@
   <div class="card-header">
     <h1 class="card-title">Listado de usuarios</h1>
     <button class="btn btn-success btn-sm float-right" (click)="openDialog()">
-      <i class="fas fa-plus"> </i>Nuevo Registro
+      <i class="fas fa-plus"> </i>Nuevo Usuario
     </button>
   </div>
 
-  <div style="margin-top: 10px">
-    <mat-form-field appearance="standard">
-      <mat-label>Filtro</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ej. Salvador"
-        #input
-      />
-    </mat-form-field>
+  <div class="container-fluid mt-4 ">
+    <div class="row">
+      <div class="col-md-12 col-lg-4 col-sm-3 card-profile" *ngFor="let item of usuarios">
+        <div class="card" style="width: 18rem;">
+          <span class="badge bg-success float-right">{{item.rol | uppercase}}</span>
+          <div class="imageProfile" *ngIf="item.imageUser">
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <!-- ID Column -->
-        <ng-container matColumnDef="code">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-          <td mat-cell *matCellDef="let row">{{ row.code }}</td>
-        </ng-container>
+            <img [src]="item.imageUser "  width="150" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" alt="user-profile" #profileImage>
+          </div>
+          <div class="card-body">
+            <h2 class="card-title">{{item.user}}</h2>
+          </div>
+          <div class="card-footer">
+            <a (click)="editUser(item)" class="btn btn-primary">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a  class="btn btn-danger float-right"
+            (click)="deleteUser(item)">
+              <i class="fa fa-trash"></i>
+            </a>
+          </div>
 
-        <!-- User Column -->
-        <ng-container matColumnDef="user">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario</th>
-          <td mat-cell *matCellDef="let row">{{ row.user }}</td>
-        </ng-container>
 
-        <!-- Rol Column -->
-        <ng-container matColumnDef="rol">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
-          <td mat-cell *matCellDef="let row">{{ row.rol }}</td>
-        </ng-container>
-
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-          <td mat-cell *matCellDef="let row">
-           <span class="badge bg-success">{{ row.status | titlecase }}</span> </td>
-        </ng-container>
-
-        !-- Action Column -->
-        <ng-container matColumnDef="accion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Accion</th>
-          <td mat-cell *matCellDef="let row">
-            <button mat-icon-button (click)="editUser(row)" color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button (click)="deleteUser(row.user)" color="warn">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">
-            No se encontraron resultados "{{ input.value }}"
-          </td>
-        </tr>
-      </table>
-
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
+        </div>
+      </div>
     </div>
+
+
   </div>
-</div>
