--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -45,17 +45,17 @@
              
             </div>
             <div class="row">
-              <div class="col-8">
+              <!-- <div class="col-8">
                 <div class="icheck-primary">
                   <input type="checkbox" id="remember">
                   <label for="remember">
                     Remember Me
                   </label>
                 </div>
-              </div>
+              </div> -->
               <!-- /.col -->
-              <div class="col-4">
-                <button type="submit" class="btn btn-primary btn-block" (click)="onLogin(myForm.value)">Acceder</button>
+              <div class="col">
+                <button type="submit" class="btn btn-primary  float-right" (click)="onLogin(myForm.value)">Acceder</button>
               </div>
               <!-- /.col -->
             </div>
