--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,16 +8,24 @@
       </div>
     </div><!-- /.container-fluid -->
   </section>
+<div class="container">
+  <div class="container-fluid imagen-dash">
+    <h2 class="title-bio">BIO</h2>
+    <img src="../../../assets/images/logo.png" width="250px" alt="">
+    <h2 class="sub-bio">CEL</h2>
+  </div>
+</div>
+ 
 
   
   <div class="container-fluid">
 
   <div class="row">
 
-    <div class="col-lg-3 col-6 caja-animated">
+    <div class="col-lg-4 col-md-4 col-sm-12">
     <div class="small-box bg-info">
     <div class="inner">
-    <h3>{{totalExamenes?.length}}</h3>
+    <h2>{{totalExamenes?.length}}</h2>
     <p>Examenes Totales</p>
     </div>
     <div class="icon">
@@ -27,10 +35,10 @@
     </div>
     </div>
 
-    <div class="col-lg-3 col-6 caja-animated">
+    <div class="col-lg-4 col-md-4 col-sm-12 ">
       <div class="small-box bg-info">
       <div class="inner">
-      <h3>{{totalExamenesActivos?.length}}</h3>
+      <h2>{{totalExamenesActivos?.length}}</h2>
       <p>Examenes Activos</p>
       </div>
       <div class="icon">
@@ -40,10 +48,10 @@
       </div>
       </div>
 
-      <div class="col-lg-3 col-6 caja-animated">
+      <div class="col-lg-4 col-md-4 col-sm-12 ">
         <div class="small-box bg-success">
         <div class="inner">
-        <h3>{{totalPacientes?.length}}</h3>
+        <h2>{{totalPacientes?.length}}</h2>
         <p>Pacientes Totales</p>
         </div>
         <div class="icon">
