--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,21 +2,14 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a [routerLink]="['/dashboard']"  class="brand-link">
-      <img src="../assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="../../../assets/images/logo.png" alt="BioCel Logo" class="brand-image img-responsive img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">BioCell</span>
     </a>
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="../assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a [routerLink]="['/dashboard']"  class="d-block">Biocell - Lab</a>
-        </div>
-      </div>
+      
+      
 
 
       <!-- Sidebar Menu -->
